corrected webkit image sizing behind yardsale block issue

--- a/app/assets/stylesheets/bootstrap.css.less
+++ b/app/assets/stylesheets/bootstrap.css.less
@@ -627,9 +627,12 @@ body {
 	}
 
 	.fillYardsale {
+		height: 220px;
+		width: 280px;
 		top: 392px;
 		left: 719px;
 		z-index: 30;
+		
 	}
 
 	.fillDigital {
@@ -775,12 +778,13 @@ body {
 	}
 
 	//bottom row
+
 	.yardsaleBlock {
 		position: absolute;
-		top: 392px;
-		left: 719px;
 		width: 323px;
 		height: 285px;
+		top: 393px;
+		left: 719px;
 		z-index: 60;
 	}
 
